# agent

./: .gitignore  LICENSE  README.md  config.toml  main.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: build.yaml  publish.yaml  test.yaml
src/: completions.py  config.py  logging.py  tools.py  utils.py
src/agent/: __init__.py  __main__.py  completions.py  config.py  logging.py  rich.py  runtime.py  scaffold.py  setup.py  tools.py  utils.py  video.py
src/agent/cli/: init.py  main.py  start.py
src/tests/: test_scaffold_cypress.py  test_scaffold_playwright.py
