[project]
name = "automators-agent"
version = "0.1.8"
description = "Automators AI Agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.3.3",
    "pytest-playwright>=0.5.2",
    "openai>=1.51.2",
    "python-dotenv>=1.0.1",
    "typer>=0.12.5",
    "playwright>=1.47.0",
    "beautifulsoup4>=4.12.3",
    "moviepy>=1.0.3",
    "pillow>=11.0.0",
]

[tool.uv]
package = true
override-dependencies = ["greenlet==3.1.0"]

[project.scripts]
agent = "agent.cli:main.app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent"]
